// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse parse media 1`] = `
"height: 100px;
&:focus {
  border-width: 1px;
  background-color: #009688;
  color: #fff;
}
@media screen and (max-width: 120em) {
  font-size: 15px;
  padding: 16px;
}
@media screen and (max-width: 93em) {
  font-size: 14px;
  padding: 24px;
}
@media screen and (max-width: 80em) {
  font-size: 13px;
  padding: 16px;
}
@media screen and (max-width: 50em) {
  font-size: 12px;
  padding: 8px;
}
"
`;

exports[`parse parse stand 1`] = `
"padding: 8px;
height: 100px;
&:focus {
  padding: 16px;
  height: 200px;
}
"
`;

exports[`parseJSS parse media 1`] = `
"height: 100px;
&:focus {
  border-width: 1px;
  background-color: #009688;
  color: #fff;
}
@media screen and (max-width: 120em) {
  font-size: 15px;
  padding-top: 24px;
}
@media screen and (max-width: 93em) {
  font-size: 14px;
  padding: 24px;
}
@media screen and (max-width: 80em) {
  font-size: 13px;
  padding: 16px;
}
@media screen and (max-width: 50em) {
  font-size: 12px;
  padding: 8px;
}
"
`;

exports[`parseJSS parse mkHide 1`] = `
"mk-hide: small;

"
`;

exports[`parseJSS parse stand 1`] = `
"padding: 8px;
height: 100px;
&:focus {
  padding: 16px;
  height: 200px;
}
"
`;
